[package]
name = "ld2410c"
version = "0.1.0"
edition = "2024"
description = "no_std async driver for the LD2410C radar sensor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/ld2410c"
keywords = ["embedded", "driver", "no-std", "radar"]
categories = ["embedded", "no-std"]

[dependencies]

[features]
